--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<body bgcolor="sky blue">
-<h1> Welcome</h1>
+<body bgcolor="red">
+<h1> Welcome to Nepal</h1><br>
+<h1> This is my country</h1>
 </body>
 </html>
